added form section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="raleway-normal">
     <header>
-    <nav class="navigation">
+    <nav class="navigation inter-normal">
         <h1>LOGO</h1>
         <a href=""><button>Sign Up</button></a>
         
@@ -59,6 +59,23 @@
             </div>
           </div>
 
+        </section>
+        <section class="section3">
+            <form action="">
+                <div class="div4">
+                    <div>
+                        <h1>Let’s Get in Touch</h1>
+
+                    </div>
+                    <div class="inter-normal">
+                        <p class="p1">Email <br> <input class="i1" type="email" name="" id="" placeholder="example@email.com" ></p>
+                        <p>Name <br><input class="i2" type="text" name="" id="" placeholder="full name"></p>
+                        <p>Massage <br> <textarea class="i3" name="" id="" cols="30" rows="10" placeholder="write your message...."></textarea></p>
+                        <button>Get in Touch</button>
+
+                    </div>
+                </div>
+            </form>
         </section>
 
 
