--- a/index.html
+++ b/index.html
@@ -81,6 +81,22 @@
 
     </main>
     <footer>
+        <section class="section4 inter-normal">
+            <h1>LOGO</h1>
+         <div>
+            <div class="div5">
+              <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+
+            </div>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">How it Works</a></li>
+                <li><a href="">Services</a></li>
+
+            </ul>
+         </div>
+        </section>
 
 
     </footer>
